fix overflow x

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,9 @@ html,
 body {
   scroll-behavior: smooth;
 }
+.slick-arrow {
+  display: none !important;
+}
 header {
   position: sticky;
   top: 0;
